--- a/src/styles/UploadForm.css
+++ b/src/styles/UploadForm.css
@@ -16,7 +16,7 @@
 }
 
 .panel {
-  height: 450px;
+  max-height: 450px;
   border-radius: 1em 1em 0 0;
   padding: 1em 0.5em;
   width: 100%;
@@ -92,9 +92,10 @@
   display: flex;
   bottom: 0;
   height: 100vh;
-  background-color: rgba(6, 24, 44, 0.25);
+  background-color: rgba(6, 24, 44, 0.85);
 }
 .upload_btn {
+  cursor: pointer;
   padding: 0.5em 0.6em;
   display: inline;
   border-radius: 4px;
@@ -112,6 +113,7 @@
 background-color: rgba(0, 0, 0, 0.24);
 }
 .cancel_btn {
+  cursor: pointer;
   padding: 0.5em 0.6em;
   display: inline;
   border-radius: 4px;
