--- a/src/styles/UploadForm.css
+++ b/src/styles/UploadForm.css
@@ -42,10 +42,21 @@
   width: 100%;
 }
 
+.imagePreview {
+  border-radius: 4px;
+  padding: 0.25em 0.3em;
+  border: 1px solid #ccc;
+  box-shadow: inset 0 1px 3px #ddd;
+  display: inline-block;
+  vertical-align: middle;
+  box-sizing: border-box;
+  height: 221px;
+  margin-bottom: 10px;
+}
 .imagePreview > img {
   object-fit: contain;
   width: 100%;
-  height: 220px;
+  height: 100%;
 }
 
 .brandFontSelect {
@@ -77,7 +88,8 @@
   width: 14%;
   margin-right: 3%;
 }
-.inputs:focus,.inputs:focus {
+.inputs:focus,
+.inputs:focus {
   outline: 0;
   border-color: rgb(158, 219, 192);
 }
@@ -110,7 +122,7 @@
   border-radius: 0.5em;
 }
 .upload_btn:disabled {
-background-color: rgba(0, 0, 0, 0.24);
+  background-color: rgba(0, 0, 0, 0.24);
 }
 .cancel_btn {
   cursor: pointer;
